Fixed <main> mobile screen scrollbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -606,6 +606,7 @@ main {
   grid-area: main;
   color: #535353;
   height: 100%;
+  width: 100%;
   overflow-x: hidden;
 }
 
