--- a/scss/_main-content.scss
+++ b/scss/_main-content.scss
@@ -18,6 +18,7 @@ main {
   @include grid(main);
   color: #535353;
   height: 100%;
+  width: 100%;
   overflow-x: hidden;
 }
 
